--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="Tournaments"
+         connectionString="Server=localhost;Database=tournaments;Uid=root;Pwd=silly110Horse"
+         providerName="MySql.Data.MySqlClient"/>
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
