--- a/TrackerLibrary/TrackerLibrary.csproj
+++ b/TrackerLibrary/TrackerLibrary.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Models\TeamModel.cs" />
     <Compile Include="Models\TournamentModel.cs" />
     <Compile Include="DataAccess\TextConnector.cs" />
+    <Compile Include="TournamentLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
