Set up sending emails with local host.

--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -2,12 +2,21 @@
 <configuration>
   <appSettings>
     <add key="filePath" value="C:\Users\JC\tournament-tracker\text-data"/>
+    <add key="senderEmail" value="jccchen103@gmail.com"/>
+    <add key="senderDisplayName" value="Janet"/>
   </appSettings>
   <connectionStrings>
     <add name="Tournaments"
-         connectionString="Server=localhost;Database=tournaments;Uid=root;Pwd=silly110Horse"
+         connectionString="Server=localhost;Database=tournaments;Uid=root;Pwd=silly110Horse;SslMode=Preferred;"
          providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network">
+        <network host="127.0.0.1" userName="Janet" password="testing" port="25" enableSsl="false"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
